# timerecords

./: .gitignore  CMakeLists.txt  README.md  notes.txt
AppTimeRecords/: .gitignore  AppManager.cpp  AppManager.h  AppTimeRecords.cpp  AppTimeRecords.h  CMakeLists.txt  Config.cpp  Config.hpp  Server.cpp  Server.h  main.cpp
AppTimeRecords/model/: Account.cpp  Account.h  AccountTask.cpp  AccountTask.h  AccountTaskType.cpp  AccountTaskType.h  Company.cpp  Company.h  CompanyTaskType.cpp  CompanyTaskType.h  DbVersion.cpp  DbVersion.h  Email.cpp  Email.h  KeyValue.cpp  KeyValue.h  Login.cpp  Login.h  OptInKey.cpp  OptInKey.h  Task.cpp  Task.h  Team.cpp  Team.h  TeamTaskType.cpp  TeamTaskType.h  Version.cpp  Version.h
AppTimeRecords/model/sqltraits/: ptime.h  uuid.h
AppTimeRecords/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
AppTimeRecords/nbproject/private/: configurations.xml
AppTimeRecords/page/: EditTaskType.cpp  EditTaskType.h  Front.cpp  Front.h  Main.cpp  Main.h  TimeRecord.cpp  TimeRecord.h
x64/: start.sh
x64/web/style/: tr.css
